--- a/eds/static/publicNeed.html
+++ b/eds/static/publicNeed.html
@@ -1,31 +1,147 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <title>完整demo</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/ueditor.config.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/ueditor.all.min.js"> </script>
+    <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
+    <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
+    <script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/lang/zh-cn/zh-cn.js"></script>
+    <link rel="stylesheet" href="./resources/bootstrap3/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./resources/flat-ui-2.2.2-dist/css/flat-ui.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 
-<title>专家发现系统</title>
-
-<style>
-    body {
-    font-family: 'Microsoft Yahei',"微软雅黑",arial,"宋体",sans-serif;
-    font-size: 18px;
-    line-height: 1.72222;
-    color: #777;
-    background-color: #fff;
-    line-height: 1.4em;
-    letter-spacing: 0.08em;}
-    
+    <link rel="stylesheet" href="./resources/vue/index.css">
+    <script src="./resources/flat-ui-2.2.2-dist/js/vendor/jquery.min.js"></script>
+    <script src="./resources/bootstrap3/js/bootstrap.min.js"></script>
+    <script src="./resources/vue/vue.js"></script>
+    <script src="./resources/layer/layer.js"></script>
+    <script src="./resources/vue/commonTools.js"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <style type="text/css">
+        div{
+            width:100%;
+        }
+    </style>
+    <style>
+  .el-tag + .el-tag {
+    margin-left: 10px;
+  }
+  .button-new-tag {
+    margin-left: 10px;
+    height: 32px;
+    line-height: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .input-new-tag {
+    width: 90px;
+    margin-left: 10px;
+    vertical-align: bottom;
+  }
 </style>
-<script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/ueditor.config.js"></script>
-<script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/ueditor.all.min.js"></script>
 </head>
-
-
 <body>
-<textarea name="content" id="content"></textarea>
+<div id="app" style="width:800px;margin:0px 50px;margin-top:50px">
+<el-form ref="form"  label-width="80px">
+  <el-form-item label="需求标题">
+    <el-input v-model="title"></el-input>
+  </el-form-item>
+    <el-form-item label="添加标签">
+    <el-tag
+  :key="tag"
+  v-for="tag in dynamicTags"
+  closable
+  :disable-transitions="false"
+  @close="handleClose(tag)">
+  {{tag}}
+</el-tag>
+<el-input
+  class="input-new-tag"
+  v-if="inputVisible"
+  v-model="inputValue"
+  ref="saveTagInput"
+  size="small"
+  @keyup.enter.native="handleInputConfirm"
+  @blur="handleInputConfirm"
+>
+</el-input>
+<el-button v-else class="button-new-tag" size="small" @click="showInput">+ New Tag</el-button>
+  </el-form-item>
+  <el-form-item label="需求描述">
+    <el-input type="textarea" v-model="desc"></el-input>
+  </el-form-item>
+  <el-form-item>
+    <el-button type="primary" @click="onSubmit">立即创建</el-button>
+    <el-button>取消</el-button>
+  </el-form-item>
+</el-form>
+</div>
+<div>
+    <h5>需求描述</h5>
+    <div id="editor" type="text/plain" style="width:1024px;height:500px;"></div>
+</div>
 <script type="text/javascript">
-  var editor = UE.getEditor('content');
+    var ue = UE.getEditor('editor', {
+		serverUrl: "/upload/"
+	});
+	$(function() {
+        var vm = new Vue({
+            el : '#app',
+            extends: CommonTools,
+            data : function() {
+                return {
+                          title: '',
+                          topic:'',
+                          desc: '',
+                         dynamicTags: ['标签一', '标签二', '标签三'],
+                         inputVisible: false,
+                         inputValue: ''
+                  }
+              },
+            watch: {
+                topic: function (newQuestion, oldQuestion) {
+                       $.ajax({
+                            url:"/needtopic/getTopic",
+                            type:'POST',
+                            data:{topic:newQuestion},
+                            dataType: 'json',
+                            success:function(data){
+                                re=data.obj;
+                                console.log(re);s
+                            }
+                        });
+                }
+              },
+            methods: {
+              onSubmit() {
+                console.log('submit!');
+              }
+            },
+              handleClose(tag) {
+                this.dynamicTags.splice(this.dynamicTags.indexOf(tag), 1);
+              },
+
+              showInput() {
+                this.inputVisible = true;
+                this.$nextTick(_ => {
+                  this.$refs.saveTagInput.$refs.input.focus();
+                });
+              },
+
+              handleInputConfirm() {
+                let inputValue = this.inputValue;
+                if (inputValue) {
+                  this.dynamicTags.push(inputValue);
+                }
+                this.inputVisible = false;
+                this.inputValue = '';
+              }
+          });
+  });
+
 </script>
 </body>
 </html>
