--- a/eds/static/Kickstarter.html
+++ b/eds/static/Kickstarter.html
@@ -43,7 +43,7 @@
                     </div>
                     </a>
                   </li>
-                  <li><a href="/discover/advanced?ref=nav_search&amp;result=all&amp;term=555" class="bttn bttn-medium bttn-white keyboard-focusable shadow-button block mt3 ml4 mr4">See all {{num}} results</a></li></ul></div>
+                  <li><a @click="search_word" class="bttn bttn-medium bttn-white keyboard-focusable shadow-button block mt3 ml4 mr4">See all {{num}} results</a></li></ul></div>
             </div>
           </div>
         </div>
