--- a/eds/static/searchreasult2.html
+++ b/eds/static/searchreasult2.html
@@ -11,10 +11,11 @@
     <script src="./resources/layer/layer.js"></script>
     <script src="./js/search2.js"></script>
 
-    <link rel="stylesheet" href="./resources/element/index.css">
+    <!--<link rel="stylesheet" href="./resources/element/index.css">
 
-    <link rel="stylesheet" href="./resources/vue/index.css">
-    <script src="./resources/element/index.js"></script>
+    <!--<script src="./resources/element/index.js"></script>-->
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <link rel="stylesheet" media="screen,print" href="/static/css/pure-atomic-77a89317e0b3c7426a296e339669c6c39e4a4a0901a767f996be54c4d22759ff.css">
 
     <style>
@@ -244,7 +245,7 @@
         <h3 style="font-size:22px;"class="normal mb3 mb5-sm title clearfix pt2">Search <b class="count ksr-green-500">{{keyword}}</b> then Find <b class="count ksr-green-500">{{num}}</b> teachers</h3>
         <template>
           <div>
-            <el-button @click="show = !show" type="info" plain>More filters</el-button>
+            <el-button @click="show = !show" type="info" size="mini" plain>More filters</el-button>
             <div >
               <el-collapse-transition>
                 <div v-show="show">
@@ -266,9 +267,9 @@
                             <el-radio v-for="h in hindexs" :label="h.value">{{h.value}}({{h.num}})</el-radio>
                           </el-radio-group>
                         </el-form-item>
-                        <el-form-item style="height:50px">
-                          <el-button type="primary" @click="do_search">立即创建</el-button>
-                          <el-button>取消</el-button>
+                        <el-form-item >
+                          <el-button type="primary" size="mini" @click="do_search">立即创建</el-button>
+                          <el-button size="mini">取消</el-button>
                         </el-form-item>
                       </el-form>
                   </div>
