--- a/eds/static/aboutproject.html
+++ b/eds/static/aboutproject.html
@@ -23,9 +23,9 @@
 
 <body>
 <div style="padding:20px">
-<div class="md-section-divider"></div><h3 data-anchor-id="bp87" id="项目背景">项目背景</h2><p data-anchor-id="2qt2">中华人民共和国国务院关于“国家中长期科学和技术发展规划纲要”中提到，科学技术是第一生产力，是先进生产力的集中体现和主要标志。进入21世纪，新科技革命迅猛发展，深刻地改变经济和社会的面貌。随着国家科教兴国战略的开展，中国培育了一大批优秀的高科技人才，产学研合作成为推动经济和整个社会发展的一种最强劲的动力，是高等院校服务国家经济社会发展的迫切需要。 <br>
+<div class="md-section-divider"></div><h3 data-anchor-id="bp87" id="项目背景">项目背景</h3><p data-anchor-id="2qt2">中华人民共和国国务院关于“国家中长期科学和技术发展规划纲要”中提到，科学技术是第一生产力，是先进生产力的集中体现和主要标志。进入21世纪，新科技革命迅猛发展，深刻地改变经济和社会的面貌。随着国家科教兴国战略的开展，中国培育了一大批优秀的高科技人才，产学研合作成为推动经济和整个社会发展的一种最强劲的动力，是高等院校服务国家经济社会发展的迫切需要。 <br>
 但在当下，技术发展更快更复杂，信息过载现象不断加重，企业面对源源不断出现的新技术，无法快速准确寻找到符合自身需求的专家团队以帮助自身完成技术升级，导致盲目引进专家，造成了成本损失，也阻碍了产学研的发展。如何让不同专业的人才找到适合自己发展的空间，如何让企业和政府准确找到满足该领域需求得特殊型人才？为此通过可靠的专家信息源支持来帮助企业合理引进人才已经变得至关重要。 <br>
-由于百度等通用搜索引擎存在信息量大、查询不准确、深度不够等问题，不能很好地满足用户搜索学术专家的特定需求。因此开发一个专家发现系统成为迫切需要，本系统旨在帮助企业和政府方便的找到相关领域的合适人才，对人才引进专家团队准确定位，高效对接合适的专家团队，让高科技人才资源可以实现最大化的价值。</p><div class="md-section-divider"></div><h3 data-anchor-id="rca2" id="模块介绍">模块介绍</h2><ul data-anchor-id="jrev">
+由于百度等通用搜索引擎存在信息量大、查询不准确、深度不够等问题，不能很好地满足用户搜索学术专家的特定需求。因此开发一个专家发现系统成为迫切需要，本系统旨在帮助企业和政府方便的找到相关领域的合适人才，对人才引进专家团队准确定位，高效对接合适的专家团队，让高科技人才资源可以实现最大化的价值。</p><div class="md-section-divider"></div><h3 data-anchor-id="rca2" id="模块介绍">模块介绍</h3><ul data-anchor-id="jrev">
 <li>专家主页数据爬取：对各大高校的老师主页进行主页信息的爬取。</li>
 <li>论文信息爬取：对“百度学术”上的海量论文进行论文摘要的爬取。</li>
 <li>基于专家画像的信息抽取：对爬取的信息选择合适的机器学习算法进行分类训练、信息抽取。通过整合互联网上的专家数据，基于基本信息、任职生涯、研究方向等多方面构建出精准的专家画像。</li>
@@ -35,7 +35,7 @@
 <li>数据可视化：对分析得到的各项信息进行数据可视化，以更直观的形式呈现在用户眼前。</li>
 </ul></div>
 
-<div class="md-section-divider"></div><h3 data-anchor-id="rca2" id="架构图">架构图</h2><ul data-anchor-id="jrev">
+<div class="md-section-divider"></div><h3 data-anchor-id="rca2" id="架构图">架构图</h3><ul data-anchor-id="jrev"></ul>
 <img src="./images/jiagou.png" style="width:100%"/>
 </div>
 </body>
