--- a/eds/static/aboutus.html
+++ b/eds/static/aboutus.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
 
-<title>专家发现系统</title>
+    <title>专家发现系统</title>
 
-<style>
+    <style>
     body {
     font-family: 'Microsoft Yahei',"微软雅黑",arial,"宋体",sans-serif;
     font-size: 18px;
@@ -16,7 +17,8 @@
     line-height: 1.4em;
     letter-spacing: 0.08em;}
     
-</style>
+
+    </style>
 
 </head>
 
@@ -24,31 +26,45 @@
 <body>
 
 <div style="padding:20px">
-<h3 data-anchor-id="v0s9" id="团队说明">团队说明</h2><ol data-anchor-id="eyjc">
-<li>团队名称：刻刻</li>
-<li>中文寓意：时时刻刻，效率高；谐音笑声，乐观向上；契合专家发现系统设计意图，节省用户时间，提高用户效率。</li>
-<li>团队宣言：资源共享，优势互补，共同发展！</li>
-<li>团队Logo：<img src="./images/KeKeLoGo.png" style="height:50px"/></li>
-<li>Logo寓意说明：时时努力，刻刻前进。</li>
-</ol><div class="md-section-divider"></div><h3 data-anchor-id="t1zn" id="组员介绍">组员介绍</h2><p data-anchor-id="n9oh"><img src="./images/chenrui.jpg" style="height:150px"/> <br>
- - 姓名：陈瑞 <br>
- - 角色：项目经理 <br>
- - 承担任务：爬虫编写、数据清洗、头像识别处理。另外负责整个项目的协调推进，保证项目进度。</p><hr><p data-anchor-id="fp3o"><img src="./images/zhangjiulin.jpg" style="height:150px"/> <br>
- - 姓名：张久林 <br>
- - 角色：产品经理 <br>
- - 承担任务：论文数据预处理、LDA算法抽取主题。另外负责产品需求列表，产品发布演讲。</p><hr><p data-anchor-id="frum"><img src="./images/zhangdaofeng.jpg" style="height:150px"/> <br>
- - 姓名：张道枫 <br>
- - 角色：技术总监 <br>
- - 承担任务：爬虫编写、Web架构搭建、专家list页面实现、ES搜索框架搭建、主题抽取。另外负责解决项目技术难题。</p><hr><p data-anchor-id="8mqi"><img src="./images/liwei.jpg" style="height:150px"/> <br>
- - 姓名：李微 <br>
- - 角色：开发成员 <br>
- - 承担任务：专家详情页面实现、信息抽取、主题抽取。另外负责会议记录、相关文档撰写。</p><hr><p data-anchor-id="e741"><img src="./images/liudefa.jpg" style="height:150px"/> <br>
- - 姓名：刘德发 <br>
- - 角色：开发成员 <br>
- - 承担任务：首页页面实现、头像下载。另外负责会议记录、相关文档撰写。</p><hr><p data-anchor-id="bwvr"><img src="./images/luyueliang.jpg" style="height:150px"/> <br>
- - 姓名：卢月亮 <br>
- - 角色：开发成员 <br>
- - 承担任务：LDA算法实现。另外负责其他事务。</p>
+    <h2 data-anchor-id="v0s9" id="团队说明">团队说明</h2>
+    <ol data-anchor-id="eyjc">
+        <li>团队名称：刻刻</li>
+        <li>中文寓意：时时刻刻，效率高；谐音笑声，乐观向上；契合专家发现系统设计意图，节省用户时间，提高用户效率。</li>
+        <li>团队宣言：资源共享，优势互补，共同发展！</li>
+        <li>团队Logo：<img src="./images/KeKeLoGo.png" style="height:50px"/></li>
+        <li>Logo寓意说明：时时努力，刻刻前进。</li>
+    </ol>
+    <div class="md-section-divider"></div>
+    <h2 data-anchor-id="t1zn" id="组员介绍">组员介绍</h2>
+    <p data-anchor-id="n9oh"><img src="./images/chenrui.jpg" style="height:150px"/> <br>
+        - 姓名：陈瑞 <br>
+        - 角色：项目经理 <br>
+        - 承担任务：爬虫编写、数据清洗、头像识别处理。另外负责整个项目的协调推进，保证项目进度。</p>
+    <hr>
+    <p data-anchor-id="fp3o"><img src="./images/zhangjiulin.jpg" style="height:150px"/> <br>
+        - 姓名：张久林 <br>
+        - 角色：产品经理 <br>
+        - 承担任务：论文数据预处理、LDA算法抽取主题。另外负责产品需求列表，产品发布演讲。</p>
+    <hr>
+    <p data-anchor-id="frum"><img src="./images/zhangdaofeng.jpg" style="height:150px"/> <br>
+        - 姓名：张道枫 <br>
+        - 角色：技术总监 <br>
+        - 承担任务：爬虫编写、Web架构搭建、专家list页面实现、ES搜索框架搭建、主题抽取。另外负责解决项目技术难题。</p>
+    <hr>
+    <p data-anchor-id="8mqi"><img src="./images/liwei.jpg" style="height:150px"/> <br>
+        - 姓名：李微 <br>
+        - 角色：开发成员 <br>
+        - 承担任务：专家详情页面实现、信息抽取、主题抽取。另外负责会议记录、相关文档撰写。</p>
+    <hr>
+    <p data-anchor-id="e741"><img src="./images/liudefa.jpg" style="height:150px"/> <br>
+        - 姓名：刘德发 <br>
+        - 角色：开发成员 <br>
+        - 承担任务：首页页面实现、头像下载。另外负责会议记录、相关文档撰写。</p>
+    <hr>
+    <p data-anchor-id="bwvr"><img src="./images/luyueliang.jpg" style="height:150px"/> <br>
+        - 姓名：卢月亮 <br>
+        - 角色：开发成员 <br>
+        - 承担任务：LDA算法实现。另外负责其他事务。</p>
 </div>
 </body>
 </html>
