--- a/eds/static/index.html
+++ b/eds/static/index.html
@@ -22,11 +22,9 @@
             .footer .copyright span.phone_large { font-size: 20px;}
     </style>
     <script>
-        function ClearSubmit(e) {
-            if (e.keyCode == 13) {
-                return false;
-            }
-   }
+       $(function(){
+
+       });
     </script>
 </head>
 
