--- a/eds/static/publicNeed.html
+++ b/eds/static/publicNeed.html
@@ -5,11 +5,11 @@
     <title>完整demo</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/ueditor.config.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/ueditor.all.min.js"> </script>
+    <script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/ueditor.all.min.js"></script>
     <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
     <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
     <script type="text/javascript" charset="utf-8" src="/static/resources/ueditor/lang/zh-cn/zh-cn.js"></script>
-    <link rel="stylesheet" href="./resources/bootstrap3/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./resources/bootstrap3/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./resources/flat-ui-2.2.2-dist/css/flat-ui.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 
@@ -24,6 +24,7 @@
         div{
             width:100%;
         }
+
     </style>
     <style>
   .el-tag + .el-tag {
@@ -41,43 +42,46 @@
     margin-left: 10px;
     vertical-align: bottom;
   }
-</style>
+
+    </style>
 </head>
 <body>
 <div id="app" style="width:800px;margin:0px 50px;margin-top:50px">
-<el-form ref="form"  label-width="80px">
-  <el-form-item label="需求标题">
-    <el-input v-model="title"></el-input>
-  </el-form-item>
-    <el-form-item label="添加标签">
-    <el-tag
-  :key="tag"
-  v-for="tag in needTopic"
-  closable
-  :disable-transitions="false"
-  @close="handleClose(tag)">
-  {{tag}}
-</el-tag>
-<el-input
-  class="input-new-tag"
-  v-if="inputVisible"
-  v-model="inputValue"
-  ref="saveTagInput"
-  size="small">
-</el-input>
-<el-button v-else class="button-new-tag" size="small" @click="showInput">+ New Tag</el-button>
-  </el-form-item>
-    <el-form-item label="推荐主题">
-        <el-button :key="tag" v-for="tag in dynamicTags"  @click="handleInputConfirm(tag)" size="mini" round>{{tag}}</el-button>
-  </el-form-item>
-  <el-form-item label="需求描述">
-    <el-input type="textarea" v-model="desc"></el-input>
-  </el-form-item>
-  <el-form-item>
-    <el-button type="primary" @click="onSubmit">立即创建</el-button>
-    <el-button>取消</el-button>
-  </el-form-item>
-</el-form>
+    <el-form ref="form" label-width="80px">
+        <el-form-item label="需求标题">
+            <el-input v-model="title"></el-input>
+        </el-form-item>
+        <el-form-item label="添加标签">
+            <el-tag
+                    :key="tag"
+                    v-for="tag in needTopic"
+                    closable
+                    :disable-transitions="false"
+                    @close="handleClose(tag)">
+                {{tag}}
+            </el-tag>
+            <el-input
+                    class="input-new-tag"
+                    v-if="inputVisible"
+                    v-model="inputValue"
+                    ref="saveTagInput"
+                    size="small">
+            </el-input>
+            <el-button v-else class="button-new-tag" size="small" @click="showInput">+ New Tag</el-button>
+        </el-form-item>
+        <el-form-item label="推荐主题">
+            <el-button :key="tag" v-for="tag in dynamicTags" @click="handleInputConfirm(tag)" size="mini" round>
+                {{tag}}
+            </el-button>
+        </el-form-item>
+        <el-form-item label="需求描述">
+            <el-input type="textarea" v-model="desc"></el-input>
+        </el-form-item>
+        <el-form-item>
+            <el-button type="primary" @click="onSubmit">立即创建</el-button>
+            <el-button>取消</el-button>
+        </el-form-item>
+    </el-form>
 </div>
 <div>
     <h5>需求描述</h5>
@@ -151,6 +155,7 @@
             }
           });
   });
+
 
 </script>
 </body>
