--- a/eds/static/searchreasult.html
+++ b/eds/static/searchreasult.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<meta name="renderer" content="webkit"/>
-<meta name="keywords" content=""/>
-<meta name="description" content="">
-<link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-<link rel="stylesheet" href="./resources/bootstrap3/css/bootstrap.min.css" />
-<link rel="stylesheet" href="./resources/flat-ui-2.2.2-dist/css/flat-ui.min.css"/>
-<link rel="stylesheet" href="./resources/vue/index.css">
-<title>专家搜索</title>
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="renderer" content="webkit"/>
+    <meta name="keywords" content=""/>
+    <meta name="description" content="">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="./resources/bootstrap3/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./resources/flat-ui-2.2.2-dist/css/flat-ui.min.css"/>
+    <link rel="stylesheet" href="./resources/vue/index.css">
+    <title>专家搜索</title>
+    <style>
     .body {font-size: 16px;line-height: 1.4em;letter-spacing: 0.08em;padding: 0;margin: 0;color: #010101;}
     .footer { margin:0px; background-color: #fff; text-align: center;padding:30px;margin-top:40px; clear: both;letter-spacing: 0.08em;}
     .footer_nav { display: inline-block; color: #9e9e9e;padding:10px 50px; vertical-align: top;}
@@ -64,180 +64,191 @@
     .innerCtn{text-indent: 1rem}
     .light{color:red;}
     .paper{margin:20px}
-</style>
+
+    </style>
 </head>
 <body>
 <div id='app'>
-<nav role="navigation" class="navbar navbar-default" style="font-size:15px !important;">
-    <div class="navbar-header" style="margin-right:5%;margin-left:5%;">
-        <a href="/static/index.html" class="navbar-brand">
-            <img src="./images/logo-new.png" style="height:100%"/>
-        </a>
-    </div>
-    <div class="collapse navbar-collapse" style="margin-right:5%">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a href="#"  @click='open("KEKE TEAM")'>关于我们</a>
-            </li>
-            <li>
-                <a href="#"  @click='open("Project")'>项目介绍</a>
-            </li>
-        </ul>
-        <form role="search" class="navbar-form navbar-left">
-            <div class="form-group" v-if="adv">
-                <input type="text" onkeydown="return ClearSubmit(event)"  placeholder="搜索" @keydown.enter="enter_search" v-model="keyword" class="form-control" style="width:350px">
-            </div>
-			<div class="form-group" v-if="!adv">
-                <input type="text" onkeydown="return ClearSubmit(event)" placeholder="关键字" v-on:keydown.enter="enter_search" v-model="keyword"  class="form-control" style="width:100px">
-				<input type="text" onkeydown="return ClearSubmit(event)" placeholder="姓名" v-on:keydown.enter="enter_search" v-model="name" class="form-control" style="width:100px">
-				<input type="text" onkeydown="return ClearSubmit(event)" placeholder="机构" v-on:keydown.enter="enter_search" v-model="institution" class="form-control" style="width:140px">
-            </div>
-            <button class="btn btn_color" type="button" @click='go_search($event)'>搜索</button>
-			<button class="btn btn_color" type="button" @click='change_search()'>{{search_type}}</button>
-            <el-checkbox v-model="accurate_search" label="精确搜索"></el-checkbox>
-        </form>
-    </div>
-</nav>
+    <nav role="navigation" class="navbar navbar-default" style="font-size:15px !important;">
+        <div class="navbar-header" style="margin-right:5%;margin-left:5%;">
+            <a href="/static/index.html" class="navbar-brand">
+                <img src="./images/logo-new.png" style="height:100%"/>
+            </a>
+        </div>
+        <div class="collapse navbar-collapse" style="margin-right:5%">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#" @click='open("KEKE TEAM")'>关于我们</a>
+                </li>
+                <li>
+                    <a href="#" @click='open("Project")'>项目介绍</a>
+                </li>
+            </ul>
+            <form role="search" class="navbar-form navbar-left">
+                <div class="form-group" v-if="adv">
+                    <input type="text" onkeydown="return ClearSubmit(event)" placeholder="搜索"
+                           @keydown.enter="enter_search" v-model="keyword" class="form-control" style="width:350px">
+                </div>
+                <div class="form-group" v-if="!adv">
+                    <input type="text" onkeydown="return ClearSubmit(event)" placeholder="关键字"
+                           v-on:keydown.enter="enter_search" v-model="keyword" class="form-control" style="width:100px">
+                    <input type="text" onkeydown="return ClearSubmit(event)" placeholder="姓名"
+                           v-on:keydown.enter="enter_search" v-model="name" class="form-control" style="width:100px">
+                    <input type="text" onkeydown="return ClearSubmit(event)" placeholder="机构"
+                           v-on:keydown.enter="enter_search" v-model="institution" class="form-control"
+                           style="width:140px">
+                </div>
+                <button class="btn btn_color" type="button" @click='go_search($event)'>搜索</button>
+                <button class="btn btn_color" type="button" @click='change_search()'>{{search_type}}</button>
+                <el-checkbox v-model="accurate_search" label="精确搜索"></el-checkbox>
+            </form>
+        </div>
+    </nav>
 
-<div class="page">
-    <div class="container">
-        <div class="row">
-            <div class="content-title">
-                <span>全部专家</span>
+    <div class="page">
+        <div class="container">
+            <div class="row">
+                <div class="content-title">
+                    <span>全部专家</span>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="content-label">
-                <span class="content-label-span">h-index ：</span>
-                <ul>
-                    <li>
-                        <a href="#" @click='click_index($event)' :class="{ active: h_index=='' }" href="#">全部</a>
-                    </li>
-					<li v-for="item in hindexs">
-    					<a href="#" @click='click_index($event)' :class="{active:h_index==item.value}">{{item.value}}({{item.num}})</a>
-					</li>
-                </ul>
+            <div class="row">
+                <div class="content-label">
+                    <span class="content-label-span">h-index ：</span>
+                    <ul>
+                        <li>
+                            <a href="#" @click='click_index($event)' :class="{ active: h_index=='' }" href="#">全部</a>
+                        </li>
+                        <li v-for="item in hindexs">
+                            <a href="#" @click='click_index($event)' :class="{active:h_index==item.value}">{{item.value}}({{item.num}})</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="content-label">
-                <span class="content-label-span">Fields ： </span>
-                <ul>
-                    <li>
-                        <a href="#" @click='click_fields($event)':class="{ active: field=='' }" href="#">全部</a>
-                    </li>
-					<li v-for="item in fields">
-    					<a href="#" @click='click_fields($event)':class="{active:field==item.value}">{{item.value}}({{item.num}})</a>
-					</li>
-                </ul>
+            <div class="row">
+                <div class="content-label">
+                    <span class="content-label-span">Fields ： </span>
+                    <ul>
+                        <li>
+                            <a href="#" @click='click_fields($event)' :class="{ active: field=='' }" href="#">全部</a>
+                        </li>
+                        <li v-for="item in fields">
+                            <a href="#" @click='click_fields($event)' :class="{active:field==item.value}">{{item.value}}({{item.num}})</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="content-divider">
-                <a href="#" @click='change_order("all")' :class="{active:order=='all'}">综合</a>
-                <a href="#" @click='change_order("paper_num")' :class="{active:order=='paper_num'}">Paper</a>
-                <a href="#" @click='change_order("citation")' :class="{active:order=='citation'}">Citation</a>
-				<a href="#" style="float: right!important;color:#777!important;"><span id='page'>每页显示：</span><span style="cursor: hand;" @click='change_page($event,5)'>5 </span><span @click='change_page($event,10)'>10 </span><span @click='change_page($event,20)'>20 </span></a>
+            <div class="row">
+                <div class="content-divider">
+                    <a href="#" @click='change_order("all")' :class="{active:order=='all'}">综合</a>
+                    <a href="#" @click='change_order("paper_num")' :class="{active:order=='paper_num'}">Paper</a>
+                    <a href="#" @click='change_order("citation")' :class="{active:order=='citation'}">Citation</a>
+                    <a href="#" style="float: right!important;color:#777!important;"><span id='page'>每页显示：</span><span
+                            style="cursor: hand;" @click='change_page($event,5)'>5 </span><span
+                            @click='change_page($event,10)'>10 </span><span
+                            @click='change_page($event,20)'>20 </span></a>
+                </div>
             </div>
-        </div>
-		<div class="row">
-			<div class="col-md-9">
-				<ul class="content-title-1">
-					<li>
-						为您找到相关专家<span class="tips">{{num}}</span>个
-					</li>
-				</ul>
-				<ul >
-					<li class="content" v-for="item in results">
-						<div class="col-md-3 content-1-div-1">
-							<img style="width:150px":src="'/main/propic/'+item.author_id">
-						</div>
-						<div class="col-md-9 content-1-div-2">
-							<ul>
-								<li>
-									<h6>
-                                        <a :href="item.link"><strong class="search-strong" style=" color:#777">{{item.name}}</strong></a>
-									</h6>
-									<p class="p2">
+            <div class="row">
+                <div class="col-md-9">
+                    <ul class="content-title-1">
+                        <li>
+                            为您找到相关专家<span class="tips">{{num}}</span>个
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="content" v-for="item in results">
+                            <div class="col-md-3 content-1-div-1">
+                                <img style="width:150px" :src="'/main/propic/'+item.author_id">
+                            </div>
+                            <div class="col-md-9 content-1-div-2">
+                                <ul>
+                                    <li>
+                                        <h6>
+                                            <a :href="item.link"><strong class="search-strong" style=" color:#777">{{item.name}}</strong></a>
+                                        </h6>
+                                        <p class="p2">
 										<span class="text-danger">
 											<span style="font-style:italic">h</span>-index: &nbsp;
 										</span>
-										<span class="ng-binding">{{item.h_index}}</span>
-										<span class="color-grey">&nbsp; | &nbsp;</span>
-										<span class="text-danger ng-binding">#Paper: &nbsp;</span>
-										<span class="ng-binding">{{item.paper_num}}</span>
-										<span class="color-grey">&nbsp; | &nbsp;</span>
-										<span class="text-danger ng-binding">#Citation: &nbsp;</span>
-										<span class="ng-binding">{{item.citation}}</span>
-									</p>
-									<p class="p1">
-										<span  class="ng-binding ng-scope" style="margin-right:10px">{{item.school}}</span>
-                                        <span  class="ng-binding ng-scope">{{item.institution}}</span>
-                                        <a href="#" @click='show_paper(item)' style="float:right">显示论文</a>
-										<br/>
+                                            <span class="ng-binding">{{item.h_index}}</span>
+                                            <span class="color-grey">&nbsp; | &nbsp;</span>
+                                            <span class="text-danger ng-binding">#Paper: &nbsp;</span>
+                                            <span class="ng-binding">{{item.paper_num}}</span>
+                                            <span class="color-grey">&nbsp; | &nbsp;</span>
+                                            <span class="text-danger ng-binding">#Citation: &nbsp;</span>
+                                            <span class="ng-binding">{{item.citation}}</span>
+                                        </p>
+                                        <p class="p1">
+                                            <span class="ng-binding ng-scope"
+                                                  style="margin-right:10px">{{item.school}}</span>
+                                            <span class="ng-binding ng-scope">{{item.institution}}</span>
+                                            <a href="#" @click='show_paper(item)' style="float:right">显示论文</a>
+                                            <br/>
                                         <div class="innerCtn">
                                             <span class="mui-ellipsis-3" v-html="item.light_abstract"></span>
                                         </div>
-									</p>
-									<p class="p2">
-										<ul class="list-inline">
-											<li  v-for="f in item.fields">
-												<a href="#" @click='search_word($event)'>{{f}}</a>
-											</li>
-										</ul>
-									</p>
-									<p class="p3">
+                                        </p>
+                                        <p class="p2">
+                                        <ul class="list-inline">
+                                            <li v-for="f in item.fields">
+                                                <a href="#" @click='search_word($event)'>{{f}}</a>
+                                            </li>
+                                        </ul>
+                                        </p>
+                                        <p class="p3">
 										<span>
 										<i class="fa fa-eye font-xs ng-binding"></i>
 										</span>
-									</p>
-								</li>
-							</ul>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-3">
-				<ul class="content-title-1" style="margin-bottom: 11px;">
-					<li>热门搜索</li>
-				</ul>
-				<ul class="list-inline">
-					<li v-for="item in hot_word">
-						<a href="#" @click='search_word($event)'>{{item}}</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-        <div class="row">
-            <div class="pagination-self">
-                <ul>
-                    <li>
-                        <a href="#" @click='go(1)'>首页</a>
-                    </li>
-                    <li>
-                        <a href="#" @click='pre()'>上一页</a>
-                    </li>
-                    <li v-for="item in pageList">
-                        <a href="#" @click='go(item)':class="{active:page==item}">{{item}}</a>
-                    </li>
-                    <li>
-                        <a href="#" @click='next()'>下一页</a>
-                    </li>
-                    <li>
-                        <a href="#" @click='go(allPage)'>尾页</a>
-                    </li>
-                </ul>
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul class="content-title-1" style="margin-bottom: 11px;">
+                        <li>热门搜索</li>
+                    </ul>
+                    <ul class="list-inline">
+                        <li v-for="item in hot_word">
+                            <a href="#" @click='search_word($event)'>{{item}}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="pagination-self">
+                    <ul>
+                        <li>
+                            <a href="#" @click='go(1)'>首页</a>
+                        </li>
+                        <li>
+                            <a href="#" @click='pre()'>上一页</a>
+                        </li>
+                        <li v-for="item in pageList">
+                            <a href="#" @click='go(item)' :class="{active:page==item}">{{item}}</a>
+                        </li>
+                        <li>
+                            <a href="#" @click='next()'>下一页</a>
+                        </li>
+                        <li>
+                            <a href="#" @click='go(allPage)'>尾页</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 
-<div class="jumbotron footer" >
+    <div class="jumbotron footer">
 
-    <p class="copyright"><a href="" class="copyright" target="_blank">copyright@ 2018 东南大学 刻刻团队</a>&nbsp;&nbsp;&nbspkeke@seu.edu.cn</p>
+        <p class="copyright"><a href="" class="copyright" target="_blank">copyright@ 2018 东南大学 刻刻团队</a>&nbsp;&nbsp;&nbspkeke@seu.edu.cn
+        </p>
 
-</div>
+    </div>
 
 </div>
 <script src="./resources/flat-ui-2.2.2-dist/js/vendor/jquery.min.js"></script>
